tests/cert-manager/cert-manager/overlays/letsencrypt/test_data/expected/apps_v1_deployment_cert-manager-cainjector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cainjector
    kustomize.component: cert-manager
  name: cert-manager-cainjector
  namespace: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cainjector
      kustomize.component: cert-manager
  template:
    metadata:
      annotations: null
      labels:
        app: cainjector
        kustomize.component: cert-manager
    spec:
      containers:
      - args:
        - --v=2
        - --leader-election-namespace=kube-system
        env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: quay.io/jetstack/cert-manager-cainjector:v0.11.0
        imagePullPolicy: IfNotPresent
        name: cainjector
        resources: {}
      serviceAccountName: cert-manager-cainjector
